--- a/components/tag/tag.css
+++ b/components/tag/tag.css
@@ -19,7 +19,7 @@
 
   margin-right: calc(unit / 2);
   margin-bottom: 1px;
-  padding: 1px unit;
+  padding: 0 unit;
 
   vertical-align: top;
 
@@ -30,7 +30,7 @@
   background-color: background-color;
 
   font-size: 12px;
-  line-height: var(--ring-line-height-lower);
+  line-height: var(--ring-line-height);
 }
 
 .withRemove {
