RG-2060 more accurate fix for ie

--- a/components/tag/tag.css
+++ b/components/tag/tag.css
@@ -53,8 +53,11 @@
   box-shadow: 0 0 0 2px var(--ring-border-hover-color);
 }
 
+.tagAngledIE {
+  margin-bottom: -5px; /* it needs to fix vertical alignment broken by "overflow: hidden". Remove this class, when IE11 will be deprecated */
+}
+
 .tagAngled {
-  margin-bottom: -5px; /* it needs to fix vertical alignment broken by "overflow: hidden" */
   margin-left: unit;
   padding-left: calc(unit / 2);
 
