--- a/components/avatar/avatar.css
+++ b/components/avatar/avatar.css
@@ -7,7 +7,7 @@
   border-radius: var(--ring-border-radius); /* This is a "graceful degradation" fallback, while the real value is controlled by JS */
 }
 
-.group {
+.subavatar {
   position: absolute;
   top: 15px;
   left: 27px;
