RG-2077 "Pressed" controls looks like "Normal"

--- a/components/button/button.css
+++ b/components/button/button.css
@@ -352,8 +352,14 @@
   padding: 0 unit;
 }
 
-.withIcon,
 .text {
+  &:active,
+  &.active {
+    color: var(--ring-link-hover-color);
+  }
+}
+
+.withIcon {
   &:active,
   &.active {
     color: var(--ring-main-color);
